Add all pages orders

--- a/src/html/orders.html
+++ b/src/html/orders.html
@@ -36,7 +36,7 @@
                     <span class="orderBox__status">Ждет отправки</span>
                   </div>
                   <div class="orderBox__top-box">
-                    <span class="orderBox__price">30€</span>
+                    <span class="orderBox__price">от 30€</span>
                   </div>
                 </div>
 
@@ -93,7 +93,7 @@
                     <span class="orderBox__status">Ждет отправки</span>
                   </div>
                   <div class="orderBox__top-box">
-                    <span class="orderBox__price">30€</span>
+                    <span class="orderBox__price">от 30€</span>
                   </div>
                 </div>
 
@@ -134,7 +134,7 @@
                     <span class="orderBox__status">В пути на склад</span>
                   </div>
                   <div class="orderBox__top-box">
-                    <span class="orderBox__price">30€</span>
+                    <span class="orderBox__price">от 30€</span>
                   </div>
                 </div>
 
@@ -158,6 +158,235 @@
                 </div>
 
               </div>
+
+              <div class="orderBox">
+
+                <div class="orderBox__top">
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__number">Заказ 558833737</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__status">Ожидает оплаты</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__price">30€</span>
+                  </div>
+                </div>
+
+                <div class="orderBox__left">
+
+                  <div class="receptionPoint">
+                    <div class="receptionPoint__side">
+
+                      <div class="receptionPoint__side-box">
+                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                      </div>
+
+                      <div class="receptionPoint__side-box">
+                        <span class="receptionPoint__info">Оплатите пересылку.</span>
+                        <a class="button button--min" href="#">Оплатить 27€</a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="orderBox__right">
+
+                  <div class="orderBox__addresses">
+                    <ul class="orderBox__addresses-list">
+                      <li class="orderBox__addresses-first">1000-260, Portugalia, Lissabon 37 Jade-Mountain, apr 2, </li>
+                      <li class="orderBox__addresses-last">197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="orderBox">
+
+                <div class="orderBox__top">
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__number">Заказ 558833737</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__status">Оплачен, ждет отправки</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__price">30€</span>
+                  </div>
+                </div>
+
+                <div class="orderBox__left">
+
+                  <div class="receptionPoint">
+                    <div class="receptionPoint__side">
+
+                      <div class="receptionPoint__side-box">
+                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                      </div>
+
+                      <div class="receptionPoint__side-box">
+                        <span class="receptionPoint__info">Заказ оплачен, скоро мы отправим его в место назначения</span>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="orderBox__right">
+
+                  <div class="orderBox__addresses">
+                    <ul class="orderBox__addresses-list">
+                      <li class="orderBox__addresses-first">1000-260, Portugalia, Lissabon 37 Jade-Mountain, apr 2, </li>
+                      <li class="orderBox__addresses-last">197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="orderBox">
+
+                <div class="orderBox__top">
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__number">Заказ 558833737</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__status">В пути</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__price">30€</span>
+                  </div>
+                </div>
+
+                <div class="orderBox__left">
+
+                  <div class="receptionPoint">
+                    <div class="receptionPoint__side">
+
+                      <div class="receptionPoint__side-box">
+                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                      </div>
+
+                      <div class="receptionPoint__side-box">
+                        <span class="receptionPoint__date">11 января, 09:40</span>
+                        <span class="receptionPoint__info">Прибыло на территорию России</span>
+                        <a class="receptionPoint__link" href="#">Отследить весь путь</a>
+                        <div class="receptionPoint__trackNumber"><span>Трек-номер EJ015213293RU</span></div>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="orderBox__right">
+
+                  <div class="orderBox__addresses">
+                    <ul class="orderBox__addresses-list">
+                      <li class="orderBox__addresses-first">1000-260, Portugalia, Lissabon 37 Jade-Mountain, apr 2, </li>
+                      <li class="orderBox__addresses-last">197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="orderBox">
+
+                <div class="orderBox__top">
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__number">Заказ 558833737</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__status orderBox__status--red">Отменен</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__price">30€</span>
+                  </div>
+                </div>
+
+                <div class="orderBox__left">
+
+                  <div class="receptionPoint">
+                    <span class="receptionPoint__info">К сожалению посылка слишком большого размера. Напишите на <a href="#">example@email.com</a> чтобы вернуть посылку.</span>
+                  </div>
+
+                </div>
+
+                <div class="orderBox__right">
+
+                  <div class="orderBox__addresses">
+                    <ul class="orderBox__addresses-list">
+                      <li class="orderBox__addresses-first">1000-260, Portugalia, Lissabon 37 Jade-Mountain, apr 2, </li>
+                      <li class="orderBox__addresses-last">197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+
+              <div class="orderBox">
+
+                <div class="orderBox__top">
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__number">Заказ 558833737</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__status orderBox__status--green">Доставлен</span>
+                  </div>
+                  <div class="orderBox__top-box">
+                    <span class="orderBox__price">30€</span>
+                  </div>
+                </div>
+
+                <div class="orderBox__left orderBox__left--half">
+
+                  <div class="receptionPoint">
+                    <div class="receptionPoint__side">
+
+                      <div class="receptionPoint__side-box">
+                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                      </div>
+
+                      <div class="receptionPoint__side-box">
+                        <span class="receptionPoint__info">
+                          <b>Заказ доставлен</b>
+                          <b>15 марта 2022 года</b>
+                        </span>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="orderBox__right orderBox__right--half">
+
+                  <div class="orderBox__addresses">
+                    <ul class="orderBox__addresses-list">
+                      <li class="orderBox__addresses-first">1000-260, Portugalia, Lissabon 37 Jade-Mountain, apr 2, </li>
+                      <li class="orderBox__addresses-last">197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
+                    </ul>
+                  </div>
+
+                </div>
+
+              </div>
+
+
+
+
+
+
+
 
 
 
