--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -148,11 +148,10 @@
 
         <li class="separator"><a href="payment.html">payment.html</a></li>
         <li><a href="order-processed.html">order-processed.html</a></li>
-
         <li><a href="orders.html">orders.html</a></li>
         <li><a href="orders-no-orders.html">orders-no-orders.html</a></li>
-
         <li><a href="personal-data.html">personal-data.html</a></li>
+        <li><a href="order-page.html">order-page.html</a></li>
 
 
         <li class="separator"><a href="404.html">404.html</a></li>
