Add all pages orders and mobile

--- a/src/html/order-page_5.html
+++ b/src/html/order-page_5.html
@@ -17,8 +17,11 @@
 
             <div class="orderPage__title">
               <div class="title title--middle"><h2>Заказ 558833737</h2></div>
-              <a class="orderPage__cancel" href="#">Отменить заказ</a>
             </div>
+
+          </div>
+
+          <div class="orderPage__side-box">
 
             <div class="orderPage__block">
 
@@ -85,28 +88,17 @@
           <div class="orderPage__side-box">
 
             <div class="receptionPoint">
-              <span class="receptionPoint__name">Отнесите посылку в пункт приема</span>
-              <span class="receptionPoint__date">до 12 декабря</span>
+              <span class="receptionPoint__name">Заказ в пути</span>
     
-              <div class="receptionPoint__cont">
-                <div class="receptionPoint__box">
-                  <p>Loja CTT Heróis de Chaimite (Odivelas)</p>
-                  <p>Rua Heróis de Chaimite №43, Odivelas 2675-998</p>
-                  <ul class="receptionPoint__list">
-                    <li>09:00–12:30</li>
-                    <li>14:00–18:00</li>
-                  </ul>
-                </div>
-                <div class="receptionPoint__box">
-                  <div class="receptionPoint__map">
-                    <img src="../img/map-small.jpg" alt="img">
-                  </div>
-                </div>
+              <div class="receptionPoint__contBlock">
+                <span class="receptionPoint__date">11 января, 09:40</span>
+                <span class="receptionPoint__info">Прибыло на территорию России</span>
+                <span class="receptionPoint__link">Отследить весь путь</span>
               </div>
-    
-              <div class="receptionPoint__kod">
-                <span class="receptionPoint__kod-title">Назовите код оператору в отделении, так он найдет ваш заказ</span>
-                <span class="receptionPoint__kod-value">5524222926</span>
+
+              <div class="receptionPoint__trackNumberBig">
+                <span class="receptionPoint__trackNumberBig-title">Трек-номер</span>
+                <span class="receptionPoint__trackNumberBig-value">EJ015213293RU</span>
               </div>
             </div>
 
@@ -116,16 +108,15 @@
                 <li class="passed"><span>Ждет отправки</span></li>
                 <li class="passed"><span>В пути на склад</span></li>
                 <li class="passed"><span>На проверке</span></li>
-                <li class="active"><span>Ожидает оплаты</span></li>
-                <li><span>Оплачен, ждет отправки</span></li>
-                <li><span>В пути</span></li>
+                <li class="passed"><span>Ожидает оплаты</span></li>
+                <li class="passed"><span>Оплачен, ждет отправки</span></li>
+                <li class="active"><span>В пути</span></li>
                 <li><span>Доставлен</span></li>
               </ul>
             </div>
 
             <div class="price">
               <span class="price__title">Стоимость</span>
-              <span class="price__info">Может измениться после взвешивания посылки на складе. Поэтому оплачивается после проверки.</span>
               <ul class="price__list">
                 <li><span>Пересылка</span><span>от 30€</span></li>
                 <li><span>Предоплата</span><span class="text-color-greenDark">-3€</span></li>
@@ -151,13 +142,6 @@
                 </div>
               </div>
             </div>
-
-
-
-
-
-
-
 
           </div>
 
