--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -151,7 +151,14 @@
         <li><a href="orders.html">orders.html</a></li>
         <li><a href="orders-no-orders.html">orders-no-orders.html</a></li>
         <li><a href="personal-data.html">personal-data.html</a></li>
-        <li><a href="order-page.html">order-page.html</a></li>
+
+
+        <li class="separator"><a href="order-page_1.html">order-page_1.html</a></li>
+        <li><a href="order-page_2.html">order-page_2.html</a></li>
+        <li><a href="order-page_3.html">order-page_3.html</a></li>
+        <li><a href="order-page_4.html">order-page_4.html</a></li>
+        <li><a href="order-page_5.html">order-page_5.html</a></li>
+        <li><a href="order-page_6.html">order-page_6.html</a></li>
 
 
         <li class="separator"><a href="404.html">404.html</a></li>
