--- a/src/html/payment.html
+++ b/src/html/payment.html
@@ -18,7 +18,8 @@
           <div class="payment__cont">
 
             <div class="payment__cards">
-
+              <div class="payment__cards-box payment__cards-box--Visa"></div>
+              <div class="payment__cards-box payment__cards-box--MasterCard"></div>
             </div>
 
             <div class="payment__block">
@@ -27,7 +28,7 @@
                 <div class="payment__input">
                   <span class="payment__input-title">Номер карты</span>
                   <div class="payment__input-cont">
-                    <input class="payment__input-valie" type="text" />
+                    <input class="payment__input-valie input-card" type="text" />
                   </div>
                 </div>
               </div>
@@ -36,7 +37,7 @@
                 <div class="payment__input">
                   <span class="payment__input-title">Срок истечения карты</span>
                   <div class="payment__input-cont">
-                    <input class="payment__input-valie" type="text" />
+                    <input class="payment__input-valie input-date" type="text" />
                   </div>
                 </div>
               </div>
@@ -49,7 +50,7 @@
                 <div class="payment__input">
                   <span class="payment__input-title">Владелец карты</span>
                   <div class="payment__input-cont">
-                    <input class="payment__input-valie" type="text" />
+                    <input class="payment__input-valie payment__input-valie--name" type="text" />
                   </div>
                 </div>
               </div>
@@ -58,7 +59,7 @@
                 <div class="payment__input">
                   <span class="payment__input-title">CSV/CVV</span>
                   <div class="payment__input-cont">
-                    <input class="payment__input-valie" type="text" />
+                    <input class="payment__input-valie input-cvv" type="text" />
                   </div>
                 </div>
               </div>
