--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -133,6 +133,7 @@
         <li><a href="password-recovery.html">password-recovery.html</a></li>
         <li><a href="password-changes.html">password-changes.html</a></li>
         <li><a href="check-mail.html">check-mail.html</a></li>
+        <li><a href="messenger.html">messenger.html</a></li>
 
 
         <li class="separator"><a href="parcel-registration-step-1.html">parcel-registration-step-1.html</a></li>
