--- a/src/html/order-page_1.html
+++ b/src/html/order-page_1.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="receptionPoint__box">
                   <div class="receptionPoint__map">
-                    <img src="../img/map-small.jpg" alt="img">
+                    <img src="img/map-small.jpg" alt="img">
                   </div>
                 </div>
               </div>
