--- a/src/html/orders.html
+++ b/src/html/orders.html
@@ -57,7 +57,7 @@
                       </div>
                       <div class="receptionPoint__box">
                         <div class="receptionPoint__map">
-                          <img src="../img/map-small.jpg" alt="img">
+                          <img src="img/map-small.jpg" alt="img">
                         </div>
                       </div>
                     </div>
@@ -179,7 +179,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -225,7 +225,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -270,7 +270,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -353,7 +353,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="../img/orders/img-1.jpg" alt="img" /></div>
+                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
                       </div>
 
                       <div class="receptionPoint__side-box">
