--- a/src/html/order-page_3.html
+++ b/src/html/order-page_3.html
@@ -56,7 +56,7 @@
                   </div>
 
                   <div class="orderPage__table-box">
-                    <a class="orderPage__table-img" href="#"><img src="../img/orders/img-1.jpg" alt="img" /></a>
+                    <a class="orderPage__table-img" href="#"><img src="img/orders/img-1.jpg" alt="img" /></a>
                   </div>
 
                 </div>
