--- a/src/html/order-processed.html
+++ b/src/html/order-processed.html
@@ -31,7 +31,7 @@
               </div>
               <div class="receptionPoint__box">
                 <div class="receptionPoint__map">
-                  <img src="../img/map-small.jpg" alt="img">
+                  <img src="img/map-small.jpg" alt="img">
                 </div>
               </div>
             </div>
