--- a/src/html/messenger.html
+++ b/src/html/messenger.html
@@ -38,6 +38,12 @@
         <span class="messenger__box-value">Пароль изменен</span>
       </div>
 
+      <div class="messenger__box ">
+        <div class="messenger__box-close"></div>
+        <span class="messenger__box-value">Вещь удалена</span>
+        <a class="messenger__box-link" href="#">Восстановить</a>
+      </div>
+
     </div>
     <!-- END messenger -->
 
