--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -163,6 +163,8 @@
 
 
         <li class="separator"><a href="404.html">404.html</a></li>
+        <li><a href="ui-kit.html">ui-kit.html</a></li>
+
       </ol>
 
     </div>
