Add - modal-order-cancellation

--- a/src/html/modal-order-cancellation.html
+++ b/src/html/modal-order-cancellation.html
@@ -149,7 +149,30 @@
     </section>
 
   </div>
+
   
-@@include('components/modal.html')
+  <div class="modal open" id="order-cancellation">
+
+    <div class="modal__block">
+  
+      <div class="modal__cont">
+  
+        <div class="modal__close"></div>
+        <span class="modal__title">Отмена заказа</span>
+        <div class="modal__text">
+          <p>Мы не сможем вернуть вам 3€, которые вы заплатили как гарантию за отправку. Вы уверены что хотите отменить заказ?</p>
+        </div>
+    
+        <div class="modal__buttons">
+          <button class="button">Да, отменить заказ</button>
+          <span class="link">Нет, оставить</span>
+        </div>
+        
+      </div>
+  
+    </div>
+  
+  </div>
+
 @@include('components/end.html')
    
