--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -165,6 +165,8 @@
         <li class="separator"><a href="404.html">404.html</a></li>
         <li><a href="ui-kit.html">ui-kit.html</a></li>
 
+        <li class="separator"><a href="modal-order-cancellation.html">modal-order-cancellation.html</a></li>
+
       </ol>
 
     </div>
