--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,30 +57,30 @@
         <div class="tariffsPrices__block">
 
           <div class="tariffsPrices__box">
-            <a class="tariffsPrices__box-link" href="#">
+            <div class="tariffsPrices__box-link">
               <div class="tariffsPrices__box-title"><span>В Казахстан</span><img src="img/flags/kz.svg" alt="img" /></div>
               <span class="tariffsPrices__box-price">от 5€</span> 
-            </a>
+            </div>
           </div>
 
           <div class="tariffsPrices__box">
-            <a class="tariffsPrices__box-link" href="#">
+            <div class="tariffsPrices__box-link" href="#">
               <div class="tariffsPrices__box-title"><span>В Азербайджан</span><img src="img/flags/az.svg" alt="img" /></div>
               <span class="tariffsPrices__box-price">от 15€</span> 
-            </a>
+            </div>
           </div>
 
           <div class="tariffsPrices__box">
-            <a class="tariffsPrices__box-link" href="#">
+            <div class="tariffsPrices__box-link">
               <div class="tariffsPrices__box-title"><span>В Беларусь</span><img src="img/flags/by.svg" alt="img" /></div>
               <span class="tariffsPrices__box-price">от 5€</span> 
-            </a>
+            </div>
           </div>
 
           <div class="tariffsPrices__box">
-            <a class="tariffsPrices__box-link" href="#">
+            <div class="tariffsPrices__box-link modal-button" data-id="customs-limits">
               <div class="tariffsPrices__box-title tariffsPrices__box-title--all"><span>Все тарифы</span></div>
-            </a>
+            </div>
           </div>
 
         </div>
@@ -233,5 +233,6 @@
   </div>
   
 @@include('components/footer.html')
+@@include('components/modal.html')
 @@include('components/end.html')
    
