--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -161,11 +161,20 @@
         <li><a href="order-page_5.html">order-page_5.html</a></li>
         <li><a href="order-page_6.html">order-page_6.html</a></li>
 
-
         <li class="separator"><a href="404.html">404.html</a></li>
         <li><a href="ui-kit.html">ui-kit.html</a></li>
 
-        <li class="separator"><a href="modal-order-cancellation.html">modal-order-cancellation.html</a></li>
+        <li class="separator"><a href="modal-customs-limits.html">modal-customs-limits.html</a></li>        
+        <li><a href="modal-mail-changes.html">modal-mail-changes.html</a></li>
+        <li><a href="modal-password-changes.html">modal-password-changes.html</a></li>
+        <li><a href="modal-clock-changes.html">modal-clock-changes.html</a></li>
+        <li><a href="modal-order-cancellation.html">modal-order-cancellation.html</a></li>
+        
+        <li><a href="modal-reception-points.html">modal-reception-points.html</a></li>
+        <li><a href="modal-check-parcel-volume.html">modal-check-parcel-volume.html</a></li>
+        <li><a href="modal-check-parcel-volume-2.html">modal-check-parcel-volume-2.html</a></li>
+        <li><a href="modal-check-parcel-volume-3.html">modal-check-parcel-volume-3.html</a></li>
+        <li><a href="modal-forbidden-send.html">modal-forbidden-send.html</a></li>
 
       </ol>
 
