--- a/src/html/parcel-registration-step-4_a.html
+++ b/src/html/parcel-registration-step-4_a.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="parcel__pointsList-link">
-                  <a class="parcel__pointsList-link-value" href="#">Все пункты на карте</a>
+                  <span class="parcel__pointsList-link-value modal-button" data-id="reception-points">Все пункты на карте</span>
                 </div>
 
               </div>
@@ -158,5 +158,6 @@
 
   </div>
   
+@@include('components/modal.html')
 @@include('components/end.html')
    
