--- a/src/html/personal-data.html
+++ b/src/html/personal-data.html
@@ -120,7 +120,7 @@
                   <div class="informBox__unit">
                     <div class="informBox__title">
                       <span class="informBox__title-value">Эл. почта al***@mail.ru</span>
-                      <span class="informBox__title-button">Изменить</span>
+                      <span class="informBox__title-button modal-button" data-id="mail-changes">Изменить</span>
                     </div>
                     <div class="informBox__message informBox__message--warning active">
                       <span class="informBox__message-name">Почта не подтверждена</span>
@@ -131,7 +131,7 @@
                   <div class="informBox__unit">
                     <div class="informBox__title">
                       <span class="informBox__title-value">Пароль</span>
-                      <span class="informBox__title-button">Изменить</span>
+                      <span class="informBox__title-button modal-button" data-id="password-changes">Изменить</span>
                     </div>
                   </div>
 
@@ -155,5 +155,6 @@
 
   </div>
   
+@@include('components/modal.html')
 @@include('components/end.html')
    
