--- a/src/html/parcel-registration-step-4_b.html
+++ b/src/html/parcel-registration-step-4_b.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="parcel__pointsMap-button">
-                  <span class="button button--min button--empty">Выбрать другой пункт</span>
+                  <span class="button button--min button--empty modal-button" data-id="reception-points">Выбрать другой пункт</span>
                 </div>
         
               </div>
@@ -131,5 +131,6 @@
 
   </div>
   
+@@include('components/modal.html')
 @@include('components/end.html')
    
