--- a/src/html/order-page_4.html
+++ b/src/html/order-page_4.html
@@ -55,7 +55,7 @@
                   </div>
 
                   <div class="orderPage__table-box">
-                    <a class="orderPage__table-img" href="#"><img src="img/orders/img-1.jpg" alt="img" /></a>
+                    <a class="orderPage__table-img" data-fancybox="gallery" href="img/orders/img-1-big.jpg"><img src="img/orders/img-1.jpg" alt="img" /></a>
                   </div>
 
                 </div>
