--- a/src/html/orders.html
+++ b/src/html/orders.html
@@ -179,7 +179,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
+                        <a class="receptionPoint__img" data-fancybox="gallery" href="img/orders/img-1-big.jpg"><img src="img/orders/img-1.jpg" alt="img" /></a>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -225,7 +225,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
+                        <a class="receptionPoint__img" data-fancybox="gallery" href="img/orders/img-1-big.jpg"><img src="img/orders/img-1.jpg" alt="img" /></a>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -270,7 +270,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
+                        <a class="receptionPoint__img" data-fancybox="gallery" href="img/orders/img-1-big.jpg"><img src="img/orders/img-1.jpg" alt="img" /></a>
                       </div>
 
                       <div class="receptionPoint__side-box">
@@ -353,7 +353,7 @@
                     <div class="receptionPoint__side">
 
                       <div class="receptionPoint__side-box">
-                        <div class="receptionPoint__img"><img src="img/orders/img-1.jpg" alt="img" /></div>
+                        <a class="receptionPoint__img" data-fancybox="gallery" href="img/orders/img-1-big.jpg"><img src="img/orders/img-1.jpg" alt="img" /></a>
                       </div>
 
                       <div class="receptionPoint__side-box">
