--- a/src/html/parcel-registration-step-4_b.html
+++ b/src/html/parcel-registration-step-4_b.html
@@ -54,7 +54,7 @@
 
                   <div class="parcel__pointsMap-side">
 
-                    <div class="parcel__pointsMap-cont"><img src="../img/map-small.jpg" alt="img" /></div>
+                    <div class="parcel__pointsMap-cont"><img src="img/map-small.jpg" alt="img" /></div>
 
                   </div>
 
