Fix input hover

--- a/src/html/ui-kit.html
+++ b/src/html/ui-kit.html
@@ -240,7 +240,7 @@
 
             <div class="ui-kit__unitSelect">
 
-              <div class="selectPhone">
+              <div class="selectPhone selectPhone--disabled">
                 <div class="select">
                   <select disabled>
                     <option class="flag-ua">+380</option>
